fix-test horizontal scroll

--- a/css/media.css
+++ b/css/media.css
@@ -77,6 +77,9 @@
 
 @media screen and (max-width: 428px) {
     nav{
+        width: 0;
+    }
+    nav.nav-open{
         width:100%;
     }
     nav.nav-open .menu-btn{
